--- a/style.css
+++ b/style.css
@@ -142,17 +142,8 @@ p {
   width: 100%;
   border-top-left-radius: 0.5rem;
   border-top-right-radius: 0.5rem;
-}
-
-#team:after {
-  position: absolute;
-  content: " ";
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 0;
-  background-color: hsl(277, 75%, 51%, 0.5);
+  mix-blend-mode: multiply;
+  opacity: 84%;
 }
 
 @media (min-width: 800px) {
@@ -205,6 +196,10 @@ p {
   color: var(--white-paragraph);
 }
 
+.bg-primary {
+  background-color: var(--primary);
+}
+
 /* MISC  */
 ::selection {
   background-color: var(--primary);
@@ -213,9 +208,11 @@ p {
 
 /* ATTRIBUTION */
 .attribution {
+  font-family: Montserrat;
   text-align: center;
   color: var(--white);
 }
+
 .attribution a {
   color: var(--primary);
 }
